Taylor Series Expansion of Derivatives

--- a/dataInterpolationII.ipynb
+++ b/dataInterpolationII.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Taylor Series Expansion of a General\n",
+    "## Taylor Series Expansion of a Function\n",
     "\n",
     "- Jeffrey Voke. 2023"
    ],
